--- a/client/src/app/pages/jogo-alfabeto-manual/jogo-alfabeto-manual.component.scss
+++ b/client/src/app/pages/jogo-alfabeto-manual/jogo-alfabeto-manual.component.scss
@@ -1,23 +1,43 @@
+.letra-sorteada {
+  font-size: 80px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
 .card-letra {
-  width: 80px;
-  height: 80px;
+  width: 110px;
+  height: 110px;
   display: flex;
   align-items: center;
   justify-content: center;
   border: 1px solid #ddd;
   border-radius: 8px;
   background-color: #f5f5f5;
-  font-size: 24px;
   margin: 8px;
-  text-align: center;
   cursor: pointer;
+}
+
+.carta-imagem {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .list-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  max-width: 500px;
   gap: 8px;
   margin: 0 auto;
+  padding-left: 0px;
 }
+
+.feedback {
+  position: absolute;
+  top: 50%;
+  left: 2%;
+  transform: translateY(-50%);
+  width: auto;
+}
+
+
