--- a/client/src/app/pages/jogo-memoria/jogo-memoria.component.css
+++ b/client/src/app/pages/jogo-memoria/jogo-memoria.component.css
@@ -1,20 +1,23 @@
-.letra-sorteada {
-  font-size: 80px;
-  font-weight: bold;
-  margin-bottom: 20px;
-}
-
+@charset "UTF-8";
 .card-letra {
-  width: 110px;
-  height: 110px;
+  width: 100px;
+  height: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
   border: 1px solid #ddd;
   border-radius: 8px;
   background-color: #f5f5f5;
+  font-size: 24px;
   margin: 8px;
+  text-align: center;
   cursor: pointer;
+  transition: transform 0.6s; /* Transição suave */
+}
+
+/* Adiciona a classe de animação quando revelada */
+.revelar {
+  transform: rotateY(360deg); /* Gira a carta */
 }
 
 .carta-imagem {
@@ -24,13 +27,18 @@
      object-fit: cover;
 }
 
+.carta-oculta {
+  font-size: 24px;
+  color: #888;
+}
+
 .list-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  max-width: 600px;
   gap: 8px;
   margin: 0 auto;
-  padding-left: 0px;
 }
 
 .feedback {
@@ -39,4 +47,4 @@
   left: 2%;
   transform: translateY(-50%);
   width: auto;
-}/*# sourceMappingURL=jogo-alfabeto-manual.component.css.map */
+}/*# sourceMappingURL=jogo-memoria.component.css.map */
