--- a/client/src/app/pages/jogo-memoria/jogo-memoria.component.scss
+++ b/client/src/app/pages/jogo-memoria/jogo-memoria.component.scss
@@ -38,3 +38,12 @@
   gap: 8px;
   margin: 0 auto;
 }
+
+.feedback {
+  position: absolute;
+  top: 50%;
+  left: 2%;
+  transform: translateY(-50%);
+  width: auto;
+}
+
