--- a/client/src/app/components/app-header/app-header.component.scss
+++ b/client/src/app/components/app-header/app-header.component.scss
@@ -9,5 +9,14 @@
 }
 
 .header-content {
-    display: contents;
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+
+.menu-container {
+    margin-left: auto; /* Alinha a div com o p-menu e p-button à direita */
+    display: flex;
+    align-items: center;
+    gap: 8px; /* Ajuste o valor do gap conforme necessário */
 }
