--- a/client/src/app/pages/jogo-adivinhacao/jogo-adivinhacao.component.scss
+++ b/client/src/app/pages/jogo-adivinhacao/jogo-adivinhacao.component.scss
@@ -10,7 +10,18 @@
   font-size: 24px;
   margin: 8px;
   text-align: center;
+  transition: transform 0.3s ease;
   cursor: pointer;
+}
+
+.card-letra:hover {
+  transform: scale(1.1); 
+}
+
+.carta-imagem {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .list-container {
