--- a/client/src/app/pages/jogo-alfabeto-manual/jogo-alfabeto-manual.component.scss
+++ b/client/src/app/pages/jogo-alfabeto-manual/jogo-alfabeto-manual.component.scss
@@ -14,8 +14,14 @@
   border-radius: 8px;
   background-color: #f5f5f5;
   margin: 8px;
+  transition: transform 0.3s ease;
   cursor: pointer;
 }
+
+.card-letra:hover {
+  transform: scale(1.1); 
+}
+
 
 .carta-imagem {
   width: 100%;
