--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,6 +1,6 @@
-@import '../node_modules/primeng/resources/themes/lara-light-indigo/theme.css';
-@import '../node_modules/primeng/resources/primeng.min.css';
-@import '../node_modules/primeicons/primeicons.css';
+@import "../node_modules/primeng/resources/themes/lara-light-blue/theme.css";
+@import "../node_modules/primeng/resources/primeng.min.css";
+@import "../node_modules/primeicons/primeicons.css";
 .grid {
   display: flex;
   flex-wrap: wrap;
@@ -20263,6 +20263,21 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background-image: url("/assets/battleback.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+}
+
+.background-content {
+  background-image: url("/src/assets/battleback.png") !important;
+  background-color: black;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .content {
