--- a/client/src/app/pages/tela-cadastro-usuario/tela-cadastro-usuario.component.css
+++ b/client/src/app/pages/tela-cadastro-usuario/tela-cadastro-usuario.component.css
@@ -1,1 +1,10 @@
-/*# sourceMappingURL=tela-cadastro-usuario.component.css.map */
+.cadastro-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: calc(100vh - 200px);
+}
+
+.cadastro-card {
+  width: 800px;
+}/*# sourceMappingURL=tela-cadastro-usuario.component.css.map */
