--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -4,9 +4,9 @@
 
 <div class="card" *ngIf="isDockVisible()">
   <div class="dock-window">
-    <p-dock [model]="items" position="bottom">
-      <ng-template pTemplate="item" let-item>
-        <img [src]="item.icon" [alt]="item.label" width="100%" />
+    <p-dock [model]="dockItens" position="bottom">
+      <ng-template pTemplate="item" let-item >
+        <img [pTooltip]="item.label" tooltipPosition="top" [src]="item.icon" [alt]="item.label" width="100%" />
       </ng-template>
     </p-dock>
   </div>
