--- a/client/src/app/pages/pagina-inicial/pagina-inicial.component.css
+++ b/client/src/app/pages/pagina-inicial/pagina-inicial.component.css
@@ -1,1 +1,47 @@
-/*# sourceMappingURL=pagina-inicial.component.css.map */
+.container {
+  display: flex;
+  align-items: center;
+  height: calc(100vh - 200px);
+}
+
+.avatar {
+  height: 50vh;
+  margin-right: 20px;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.button-game {
+  min-width: 300px;
+  width: 350px;
+  height: 68px;
+  font-size: 20px;
+}
+
+.button-game:hover {
+  scale: 1.1;
+}
+
+.avatar-personagem {
+  border-radius: 50%;
+  height: 140px;
+  overflow: hidden;
+  display: inline-block;
+  background-color: #e0e0e0;
+}
+
+.avatar-personagem img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.content-avatar {
+  display: flex;
+  justify-content: center;
+}/*# sourceMappingURL=pagina-inicial.component.css.map */
