--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -20252,6 +20252,103 @@
   animation-fill-mode: both !important;
 }
 
+.layout-sidebar {
+  position: fixed;
+  width: 300px;
+  height: calc(100vh - 9rem);
+  z-index: 999;
+  overflow-y: auto;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  top: 7rem;
+  left: 2rem;
+  transition: transform 0.2s, left 0.2s;
+  background-color: var(--surface-overlay);
+  border-radius: 12px;
+  padding: 0.5rem 1.5rem;
+  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.02), 0px 0px 2px rgba(0, 0, 0, 0.05), 0px 1px 4px rgba(0, 0, 0, 0.08);
+}
+
+.layout-menu {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+.layout-menu .layout-root-menuitem > .layout-menuitem-root-text {
+  font-size: 0.857rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: var(--surface-900);
+  margin: 0.75rem 0;
+}
+.layout-menu .layout-root-menuitem > a {
+  display: none;
+}
+.layout-menu a {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+}
+.layout-menu a.active-menuitem > .layout-submenu-toggler {
+  transform: rotate(-180deg);
+}
+.layout-menu li.active-menuitem > a .layout-submenu-toggler {
+  transform: rotate(-180deg);
+}
+.layout-menu ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+.layout-menu ul a {
+  display: flex;
+  align-items: center;
+  position: relative;
+  outline: 0 none;
+  cursor: pointer;
+  padding: 0.75rem 1rem;
+  border-radius: 12px;
+  transition: background-color 0.2s, box-shadow 0.2s;
+}
+.layout-menu ul a .layout-menuitem-icon {
+  margin-right: 0.5rem;
+}
+.layout-menu ul a .layout-submenu-toggler {
+  font-size: 75%;
+  margin-left: auto;
+  transition: transform 0.2s;
+}
+.layout-menu ul a.active-route {
+  font-weight: 700;
+  color: var(--primary-color);
+}
+.layout-menu ul a:hover {
+  background-color: var(--surface-hover);
+}
+.layout-menu ul ul {
+  overflow: hidden;
+  border-radius: 12px;
+}
+.layout-menu ul ul li a {
+  margin-left: 1rem;
+}
+.layout-menu ul ul li li a {
+  margin-left: 2rem;
+}
+.layout-menu ul ul li li li a {
+  margin-left: 2.5rem;
+}
+.layout-menu ul ul li li li li a {
+  margin-left: 3rem;
+}
+.layout-menu ul ul li li li li li a {
+  margin-left: 3.5rem;
+}
+.layout-menu ul ul li li li li li li a {
+  margin-left: 4rem;
+}
+
 :root {
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -20263,21 +20360,16 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body.custom-background {
   background-image: url("/assets/battleback.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   min-height: 100vh;
-  margin: 0;
-  padding: 0;
-}
-
-.background-content {
-  background-image: url("/src/assets/battleback.png") !important;
-  background-color: black;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
 }
 
 .content {
@@ -20289,4 +20381,24 @@ body {
 .borda-cinza {
   border: solid #3c3c3c 1px;
   border-radius: 8px;
+}
+
+.grupo-scroll {
+  flex: 1;
+  overflow-y: auto;
+  height: calc(100vh - 250px);
+  scrollbar-width: none;
+  padding: 0px 16px;
+  box-sizing: border-box;
+}
+
+.rodape {
+  position: sticky;
+  bottom: 0;
+  padding: 8px 16px;
+  display: flex;
+}
+
+.imagem-lista {
+  max-width: 100px;
 }/*# sourceMappingURL=styles.css.map */
