--- a/client/src/app/pages/pagina-inicial/pagina-inicial.component.css
+++ b/client/src/app/pages/pagina-inicial/pagina-inicial.component.css
@@ -9,6 +9,11 @@
   margin-right: 20px;
 }
 
+.avatar-moving {
+  height: 52vh;
+  margin-right: 1.5px;
+}
+
 .buttons {
   display: flex;
   flex-direction: column;
@@ -44,4 +49,33 @@
 .content-avatar {
   display: flex;
   justify-content: center;
+}
+
+.container-selecao {
+  width: 300px;
+  max-height: 400px;
+  overflow-y: scroll;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+.container-selecao::-webkit-scrollbar {
+  display: none;
+}
+
+.div-selecao {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  gap: 30px;
+}
+
+.button-selecao {
+  width: 100%;
+  height: 48px;
+  font-size: 16px;
+  margin: 10px;
+}
+
+.button-selecao:hover {
+  scale: 1.05;
 }/*# sourceMappingURL=pagina-inicial.component.css.map */
