--- a/client/src/app/pages/pagina-inicial/pagina-inicial.component.scss
+++ b/client/src/app/pages/pagina-inicial/pagina-inicial.component.scss
@@ -19,14 +19,15 @@
   display: flex;
   flex-direction: column;
   gap: 30px;
+  width: 300px;
 }
 
-.button-game {
-  min-width: 300px;
-  width: 350px;
-  height: 68px;
-  font-size: 20px;
-}
+// .button-game {
+//   min-width: 300px;
+//   width: 350px;
+//   height: 68px;
+//   font-size: 20px;
+// }
 
 .button-game:hover {
     scale: 1.1;
