--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -20401,4 +20401,22 @@ body.custom-background {
 
 .imagem-lista {
   max-width: 100px;
+}
+
+.button-game {
+  border-radius: 12px !important;
+  height: 80px;
+  width: 100%;
+  text-align: center;
+  justify-content: center;
+  font-size: 20px;
+}
+.button-game .grid {
+  width: 100%;
+  text-align: center;
+}
+.button-game .grid .col-fixed {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }/*# sourceMappingURL=styles.css.map */
