--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -59,3 +59,79 @@ body.custom-background {
 .imagem-lista {
   max-width: 100px;
 }
+
+.button-game {
+  border-radius: 12px !important;
+  height: 80px;
+  width: 100%;
+  text-align: center;
+  justify-content: center;
+  font-size: 20px;
+  .grid {
+    width: 100%;
+    text-align: center;
+  }
+  .grid .col-fixed {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+}
+
+// ANIMACOES
+
+.botao-novo-jogo {
+  position: absolute;
+  justify-content: center;
+  align-items: center;
+  bottom: 220px;
+  left: 50%;
+  transform: translateX(-50%);
+  animation: pulse 1.5s infinite; /* Aplica a animação de pulsação */
+}
+
+@keyframes pulse {
+  0% {
+    transform: translateX(-50%) scale(1); /* Tamanho inicial */
+  }
+  50% {
+    transform: translateX(-50%) scale(1.3); /* Aumenta 10% */
+  }
+  100% {
+    transform: translateX(-50%) scale(1); /* Volta ao tamanho original */
+  }
+}
+
+
+
+.pulse-button {
+  animation: pulse-infinite 1.5s infinite; 
+}
+
+@keyframes pulse-infinite {
+  0% {
+    transform: scale(1); 
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes pulse-once {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.pulse-once {
+  animation: pulse-once 0.6s ease; 
+}
