--- a/client/src/app/pages/jogo-memoria/jogo-memoria.component.html
+++ b/client/src/app/pages/jogo-memoria/jogo-memoria.component.html
@@ -4,6 +4,9 @@
   [erros]="0"
 ></app-pontuacao>
 
+<app-personagem></app-personagem>
+
+<app-tutorial [atividade]="'JOGO_MEMORIA'"></app-tutorial>
 
 <div class="grid p-fluid align-content-center" style="height: calc(100vh - 200px);">
   <div class="feedback"> 
@@ -46,4 +49,3 @@
   ></button>
 </div>
 
-<app-personagem></app-personagem>
