--- a/client/src/app/pages/jogo-palavras/jogo-palavras.component.html
+++ b/client/src/app/pages/jogo-palavras/jogo-palavras.component.html
@@ -4,6 +4,10 @@
   [erros]="0"
 ></app-pontuacao>
 
+<app-personagem></app-personagem>
+
+<app-tutorial [atividade]="'JOGO_PALAVRAS'"></app-tutorial>
+
 <div
   class="grid p-fluid align-content-center"
   style="height: calc(100vh - 200px)"
@@ -48,4 +52,3 @@
   ></button>
 </div>
 
-<app-personagem></app-personagem>
