--- a/client/src/app/pages/jogo-adivinhacao/jogo-adivinhacao.component.html
+++ b/client/src/app/pages/jogo-adivinhacao/jogo-adivinhacao.component.html
@@ -51,7 +51,7 @@
   <div class="col-12"></div>
   <!-- Letras para arrastar -->
   <div class="col"></div>
-  <div class="col-12 opcoes-container">
+  <div class="col-12 opcoes-container content-center">
     <ul class="list-container p-0">
       <li
         *ngFor="let letra of letras"
