--- a/client/src/app/pages/turma/tela-lista-turma/tela-lista-turma.component.html
+++ b/client/src/app/pages/turma/tela-lista-turma/tela-lista-turma.component.html
@@ -52,7 +52,7 @@
     <hr />
   </div>
   <div>
-    <h4>{{ turmas?.length || 0 }} listas encontradas</h4>
+    <h4>{{ turmas?.length || 0 }} registros encontrados</h4>
   </div>
   <div class="col"></div>
 </div>
