--- a/client/src/app/pages/usuario/tela-login-usuario/tela-login-usuario.component.scss
+++ b/client/src/app/pages/usuario/tela-login-usuario/tela-login-usuario.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: calc(100vh - 200px);
+  height: calc(calc(100svh / var(--zoom)) - 200px);
 }
 
 .login-card {
