--- a/client/src/app/components/app-personagem/app-personagem.component.html
+++ b/client/src/app/components/app-personagem/app-personagem.component.html
@@ -1,4 +1,4 @@
-<div class="avatar-info" *ngIf="personagem">
+<div class="avatar-info" *ngIf="personagem?.nome">
   <img class="avatar-personagem" [src]="personagem.avatar" alt="Avatar" />
   <h4 class="avatar-nome">{{ personagem.nome }}</h4>
 </div>
