--- a/client/src/app/components/tutorial/tutorial.component.scss
+++ b/client/src/app/components/tutorial/tutorial.component.scss
@@ -5,6 +5,7 @@
   display: flex;
   align-items: center;
   padding: 10px;
+  z-index: 999;
 //   background-color: rgba(255, 255, 255, 0.8);
 //   border-radius: 8px;
 //   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -20,8 +21,8 @@
   align-items: center;
   justify-content: center;
   background: rgba(0, 0, 0, 0.9);
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   z-index: 1000;
 }
 
