--- a/client/src/app/pages/pagina-inicial/pagina-inicial.component.css
+++ b/client/src/app/pages/pagina-inicial/pagina-inicial.component.css
@@ -1,7 +1,9 @@
 .container {
   display: flex;
   align-items: center;
-  height: calc(100vh - 200px);
+  justify-content: center;
+  height: calc(100svh / var(--zoom) - 200px);
+  padding-right: calc(500px * var(--zoom));
 }
 
 .avatar {
