--- a/client/src/app/pages/pagina-inicial/pagina-inicial.component.scss
+++ b/client/src/app/pages/pagina-inicial/pagina-inicial.component.scss
@@ -1,8 +1,9 @@
 .container {
   display: flex;
   align-items: center;
-  //   justify-content: center;
-  height: calc(100vh - 200px);
+  justify-content: center;
+  height: calc(calc(100svh / var(--zoom)) - 200px);
+  padding-right: calc(500px * var(--zoom));
 }
 
 .avatar {
@@ -21,13 +22,6 @@
   gap: 30px;
   width: 300px;
 }
-
-// .button-game {
-//   min-width: 300px;
-//   width: 350px;
-//   height: 68px;
-//   font-size: 20px;
-// }
 
 .button-game:hover {
     scale: 1.1;
