--- a/client/src/app/pages/usuario/pagina-inicial-usuario/pagina-inicial-usuario.component.scss
+++ b/client/src/app/pages/usuario/pagina-inicial-usuario/pagina-inicial-usuario.component.scss
@@ -1,13 +1,15 @@
 /* Contêiner principal */
 .layout {
-    width: 100% !important;
+  width: 100% !important;
   padding: 2rem;
   display: flex;
   flex-direction: column; 
+  padding-left: calc(350px * var(--zoom));
 }
 
 .layout-content {
-  height: calc(100vh - 9rem); 
+  // height: calc(100vh - 9rem); 
+  height: calc(calc(100svh / var(--zoom)) - 150px);
   width: 100%;
   background: #fff;
   border-radius: 8px;
@@ -16,21 +18,3 @@
   overflow-y: auto;
 }
 
-@media (max-width: 768px) {
-  .layout {
-    margin-left: 320px; 
-    margin-left: 0; 
-  }
-
-  .layout-sidebar {
-    position: static; 
-    width: 100%;
-    height: auto;
-    top: 0;
-    left: 0;
-  }
-
-  .layout-content {
-    margin-top: 1rem; /* Espaçamento acima do conteúdo */
-  }
-}
