--- a/client/src/app/pages/usuario/tela-cadastro-usuario/tela-cadastro-usuario.component.scss
+++ b/client/src/app/pages/usuario/tela-cadastro-usuario/tela-cadastro-usuario.component.scss
@@ -2,7 +2,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: calc(100vh - 200px);
+  // height: calc(100vh - 200px);
+  height: calc(calc(100svh / var(--zoom)) - 150px);  
 }
 
 .cadastro-card {
