--- a/client/src/assets/layout/_menu.scss
+++ b/client/src/assets/layout/_menu.scss
@@ -1,7 +1,8 @@
 .layout-sidebar {
   position: fixed;
   width: 300px;
-  height: calc(100vh - 9rem);
+  // height: calc(100vh - 9rem);
+  height: calc(calc(100svh / var(--zoom)) - 150px);
   z-index: 999;
   overflow-y: auto;
   user-select: none;
