--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -20256,7 +20256,7 @@
 .layout-sidebar {
   position: fixed;
   width: 300px;
-  height: calc(100vh - 9rem);
+  height: calc(100svh / var(--zoom) - 150px);
   z-index: 999;
   overflow-y: auto;
   -webkit-user-select: none;
@@ -20374,9 +20374,13 @@ body.custom-background {
 }
 
 .content {
-  max-width: 1200px;
+  max-width: 100vw;
   margin: 0 auto;
   padding: 0 20px;
+}
+
+.content-center {
+  max-width: 1200px;
 }
 
 .borda-cinza {
@@ -20387,7 +20391,7 @@ body.custom-background {
 .grupo-scroll {
   flex: 1;
   overflow-y: auto;
-  height: calc(100vh - 250px);
+  height: calc(100svh / var(--zoom) - 300px);
   scrollbar-width: none;
   padding: 0px 16px;
   box-sizing: border-box;
