--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -30,9 +30,13 @@ body.custom-background {
 }
 
 .content {
-  max-width: 1200px;
+  max-width: 100vw;
   margin: 0 auto;
   padding: 0 20px;
+}
+
+.content-center {
+  max-width: 1200px;
 }
 
 .borda-cinza {
@@ -43,7 +47,8 @@ body.custom-background {
 .grupo-scroll {
   flex: 1;
   overflow-y: auto; 
-  height: calc(100vh - 250px); 
+  // height: calc(100vh - 250px);
+  height: calc(calc(100svh / var(--zoom)) - 300px);
   scrollbar-width: none;
   padding: 0px 16px; 
   box-sizing: border-box;
